--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "packageManager": "yarn@1.22.22",
   "dependencies": {
     "express": "^5.1.0",
-    "puppeteer": "^24.6.1"
+    "puppeteer-core": "^24.6.1"
   }
 }
- 
